--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,12 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <lombok.version>1.18.32</lombok.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
-        <aws.sdk.version>1.12.733</aws.sdk.version>
+        <aws.sdk.version>2.21.0</aws.sdk.version>
         <springdoc.version>2.6.0</springdoc.version>
         <testcontainers.version>1.19.3</testcontainers.version>
-        <wiremock.version>3.0.1</wiremock.version>
+        <wiremock.version>3.3.1</wiremock.version>
         <assertj.version>3.25.3</assertj.version>
         <jacoco.version>0.8.10</jacoco.version>
     </properties>
@@ -64,8 +63,8 @@
 
         <!-- AWS SDK for SQS -->
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-sqs</artifactId>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sqs</artifactId>
             <version>${aws.sdk.version}</version>
         </dependency>
 
